Added new end point to toggle status with ENUM

--- a/config/routes/api/location.yaml
+++ b/config/routes/api/location.yaml
@@ -2,3 +2,8 @@ location.create:
     path: /location/create
     methods: [POST]
     controller: App\Controller\LocationController:create
+
+location.toggle:
+    path: /location/{id}/toggle
+    methods: [POST]
+    controller: App\Controller\LocationController:toggle
